// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/drafts/panel/panel_header should match snapshot 1`] = `
<div>
  <div
    class="PanelHeader"
  >
    <div
      class="PanelHeader__left"
    >
      <div>
        title
      </div>
    </div>
    <div
      class="PanelHeader__right"
    >
      <div
        class="PanelHeader__actions"
      >
        <div>
          actions
        </div>
      </div>
      <div
        class="PanelHeader__info"
      >
        <div
          class="PanelHeader__timestamp"
        >
          56 years ago
        </div>
        <div
          class="TagWrapper-kezsCu cA-dXXM Tag Tag--danger Tag--xs"
        >
          <span
            class="TagText-bWoQAI beIloY"
          >
            draft
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/drafts/panel/panel_header should show sync icon when draft is from server 1`] = `
<div>
  <div
    class="PanelHeader"
  >
    <div
      class="PanelHeader__left"
    >
      <div>
        title
      </div>
    </div>
    <div
      class="PanelHeader__right"
    >
      <div
        class="PanelHeader__actions"
      >
        <div>
          actions
        </div>
      </div>
      <div
        class="PanelHeader__info"
      >
        <div
          class="PanelHeader__sync-icon"
        >
          <div
            data-testid="with-tooltip"
          >
            <svg
              fill="currentColor"
              height="18"
              version="1.1"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12,18A6,6 0 0,1 6,12C6,11 6.25,10.03 6.7,9.2L5.24,7.74C4.46,8.97 4,10.43 4,12A8,8 0 0,0 12,20V23L16,19L12,15M12,4V1L8,5L12,9V6A6,6 0 0,1 18,12C18,13 17.75,13.97 17.3,14.8L18.76,16.26C19.54,15.03 20,13.57 20,12A8,8 0 0,0 12,4Z"
              />
            </svg>
          </div>
        </div>
        <div
          class="PanelHeader__timestamp"
        >
          56 years ago
        </div>
        <div
          class="TagWrapper-kezsCu cA-dXXM Tag Tag--danger Tag--xs"
        >
          <span
            class="TagText-bWoQAI beIloY"
          >
            draft
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
